cambios como consecuencia de usar gameobject