@@ -3,16 +3,11 @@ package cl.uchile.dcc.cc5303;
 import cl.uchile.dcc.cc5303.elements.Bench;
 import cl.uchile.dcc.cc5303.elements.Level;
 import cl.uchile.dcc.cc5303.elements.Player;
-import cl.uchile.dcc.cc5303.interfaces.IServer;
 
-import java.net.MalformedURLException;
-import java.rmi.Naming;
 import java.rmi.RemoteException;
-import java.util.LinkedList;
 import java.util.List;
 
 public class GameEngine {
-
 
     private final static int UPDATE_RATE = 60;
     private final static int DX = 5;
@@ -22,31 +17,32 @@ public class GameEngine {
 
     public GameEngine(Game game) throws RemoteException {
         this.players = game.getLocalPlayers();
-        this.levels = game.getLevels();
+        this.levels = game.getLocalLevels();
         this.game = game;
     }
 
-
-    public void runGame() {
+    public Player runGame() throws RemoteException {
 
         System.out.println("Iniciando Juego de SSDD...");
-        while (true) { // main loop
-
+        while (players.size() != 1) { // main loop
             for (Player player : players) {
 
                 if (player.wantsToJump && !player.isTopCollidingWith(players)) player.jump();
-                if (player.wantsToMoveRight && !player.isRightCollidingWith(players)) player.moveRight();
-                if (player.wantsToMoveLeft && !player.isLeftCollidingWith(players)) player.moveLeft();
+                if (player.wantsToMoveRight &&
+                        !player.isRightCollidingWith(players) &&
+                        !player.isRightCollidingBenches(levels)) player.moveRight();
+                if (player.wantsToMoveLeft &&
+                        !player.isLeftCollidingWith(players) &&
+                        !player.isLeftCollidingBenches(levels)) player.moveLeft();
 
 
-
-                if (player.getTop() > game.levels.getFirst().getBenches().getFirst().bottom()) {
+                if (player.getTop() > game.levels.getFirst().getBenches().get(0).getBottom()) {
                     player.looseLife();
                     if (player.getLives() != 0) {
-                        player.setPosY(0);
+                        player.setPosY(220);
                         player.setPosX(400);
                     } else {
-                        //TODO: sacar player de la lista de players
+                        players.remove(player);
                     }
                 }
             }
@@ -56,7 +52,7 @@ public class GameEngine {
 
             boolean needNextLevel = false;
             for (Level l : levels) {
-                for (Bench barra : l.getBenches()) {
+                for (Bench barra : l.getLocalBenches()) {
                     for (Player player : players) {
                         if (player.isTopCollidingWith(barra))
                             player.setSpeed(0.8);
@@ -69,7 +65,7 @@ public class GameEngine {
                         }
                         if (player.isBottomCollidingWith(players)) {
                             player.setSpeed(0.01);
-                            player.isStandingUp =true;
+                            player.isStandingUp = true;
                         }
                     }
 
@@ -85,6 +81,6 @@ public class GameEngine {
             }
         }
 
-
+        return players.get(0);
     }
 }
